--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,29 @@ body {
   -webkit-backdrop-filter: blur(8px);
 }
 
+/* input[type="time"] {
+  -webkit-appearance: none;
+  cursor: pointer;
+  display: block;
+  width: 20px;
+  background-color: green;
+  color: red;
+  text-align: center;
+  position: relative;
+} */
+/* 
+input[type="time"]::-webkit-datetime-edit-fields-wrapper {
+  display: flex;
+  background: #000;
+} */
+
+/* * Hour */
+/* input[type="time"]::-webkit-datetime-edit-hour-field {
+  background-color: #f2f4f5;
+  border-radius: 15%;
+  padding: 19px 13px;
+} */
+
 /* Custom scrollbar styles */
 ::-webkit-scrollbar {
   position: fixed;
